{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 87,
  "lineage": "f0a3afdc-79e9-d31a-8dae-fe7d2955ce9d",
  "resources": [
    {
      "module": "module.stack.module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/tf-icre/global/networks/tf-icre-vpc-dev",
            "mtu": 1460,
            "name": "tf-icre-vpc-dev",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "859282603772195951",
            "project": "tf-icre",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/networks/tf-icre-vpc-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gcp_apis.google_project_service.apis"
          ]
        }
      ]
    },
    {
      "module": "module.stack.module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-01T13:37:34.037-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/tf-icre/regions/africa-south1/routers/tf-icre-vpc-dev-router",
            "name": "tf-icre-vpc-dev-router",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/networks/tf-icre-vpc-dev",
            "project": "tf-icre",
            "region": "africa-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-icre/regions/africa-south1/routers/tf-icre-vpc-dev-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gcp_apis.google_project_service.apis",
            "module.stack.module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.stack.module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "tf-icre/africa-south1/tf-icre-vpc-dev-router/tf-icre-vpc-dev-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "tf-icre-vpc-dev-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "tf-icre",
            "region": "africa-south1",
            "router": "tf-icre-vpc-dev-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gcp_apis.google_project_service.apis",
            "module.stack.module.network.google_compute_network.vpc_network",
            "module.stack.module.network.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.stack.module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "primary_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-01T13:37:35.082-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/tf-icre/regions/africa-south1/subnetworks/tf-icre-vpc-dev-primary-subnet",
            "ip_cidr_range": "10.10.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "tf-icre-vpc-dev-primary-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/networks/tf-icre-vpc-dev",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tf-icre",
            "purpose": "PRIVATE",
            "region": "africa-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-icre/regions/africa-south1/subnetworks/tf-icre-vpc-dev-primary-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gcp_apis.google_project_service.apis",
            "module.stack.module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.stack.module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-01T13:37:30.618-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-icre/global/firewalls/tf-icre-vpc-dev-allow-iap-ssh",
            "log_config": [],
            "name": "tf-icre-vpc-dev-allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/networks/tf-icre-vpc-dev",
            "priority": 1000,
            "project": "tf-icre",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/firewalls/tf-icre-vpc-dev-allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-iap"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.gcp_apis.google_project_service.apis",
            "module.stack.module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.stack.module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-01T13:37:37.357-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-icre/global/firewalls/tf-icre-vpc-dev-allow-internal",
            "log_config": [],
            "name": "tf-icre-vpc-dev-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/networks/tf-icre-vpc-dev",
            "priority": 1000,
            "project": "tf-icre",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/firewalls/tf-icre-vpc-dev-allow-internal",
            "source_ranges": [
              "10.10.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.gcp_apis.google_project_service.apis",
            "module.stack.module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.stack.module.security",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-01T13:37:32.482-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-icre/global/firewalls/tf-icre-vpc-dev-allow-lb-health-checks",
            "log_config": [],
            "name": "tf-icre-vpc-dev-allow-lb-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/networks/tf-icre-vpc-dev",
            "priority": 1000,
            "project": "tf-icre",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-icre/global/firewalls/tf-icre-vpc-dev-allow-lb-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.gcp_apis.google_project_service.apis",
            "module.stack.module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}